# BoolPgia

./: BPCLientHandler.cpp  BPCLientHandler.h  BPDispatcher.cpp  BPDispatcher.h  BPLoginService.cpp  BPLoginService.h  BPServer.cpp  BPServer.h  BoolPgia.cpp  CMakeLists.txt  GameProtocol.h  ScoreSaverService.cpp  ScoreSaverService.h
scores/: scores.txt
test/: RunTest.cpp  RunTest.h  TestMessageHandler.cpp  TestMessageHandler.h
users/: david.txt  eliav.txt  exit.txt  leon.txt  moshe.txt  netzer.txt  omer.txt
